<resources>
    <string name="app_name">Bite Burger®</string>
    <string name="app_version">1.12.3</string>
    <string name="my_linkedin">https://bit.ly/linkedin-jbm</string>

    <string name="EditText_Email">Email</string>
    <string name="EditText_Password">Contraseña</string>
    <string name="EditText_Nombre">Nombre</string>
    <string name="EditText_Apellidos">Apellidos</string>
    <string name="EditText_BirthDate">Fecha de nacimiento</string>
    <string name="EditText_Telephone">Número de teléfono</string>

    <string name="EditText_Street">Calle</string>
    <string name="EditText_City">Población</string>
    <string name="EditText_Province">Provincia</string>
    <string name="EditText_Number">Número</string>
    <string name="EditText_Floor">Piso / puerta</string>
    <string name="EditText_PostalCode">CP</string>

    <string name="title_home">Inicio</string>
    <string name="title_menu">Carta</string>
    <string name="title_account">Cuenta</string>

    <!-- Account fragment -->
    <string name="AccountFragment_DatosPersonales">Datos personales</string>
    <string name="AccountFragment_Direcciones">Direcciones de envío</string>
    <string name="AccountFragment_MetodsPago">Métodos de pago</string>
    <string name="AccountFragment_Pedidos">Mis pedidos</string>
    <string name="AccountFragment_AcercaDe">Acerca de</string>

    <!-- Botones -->
    <string name="Btn_CerrarSesion">Cerrar sesión</string>
    <string name="Btn_GuardarCambios">Guardar cambios</string>

    <!-- Menú carta -->
    <string-array name="foodmenu">
        <item>Hamburguesas</item>
        <item>Snacks/entrantes</item>
        <item>Bebidas</item>
    </string-array>

    <!-- Provincias -->
    <string-array name="listaProvincias">
        <item>Albacete</item>
        <item>Alicante/Alacant</item>
        <item>Almería</item>
        <item>Álava</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Illes Balears</item>
        <item>Barcelona</item>
        <item>Bizkaia</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Coruña, A</item>
        <item>Cuenca</item>
        <item>Gipuzkoa</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lleida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Las Palmas</item>
        <item>Pontevedra</item>
        <item>La Rioja</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>